# SP_6sem

Лабораторные/: ~$ЛР3.docx  ~$ЛР5.docx
Лабораторные/Lab1/Lab-01C/: Lab-01C.sln
Лабораторные/Lab1/Lab-01C/Lab-01C/: Lab-01C.vcxproj  Source  Source.i  Source.pre.c  Source.s
Лабораторные/Lab1/Lab-01C/Lab-01C/x64/Debug/: Lab-01C.exe.recipe  Lab-01C.ilk  vc143.idb
Лабораторные/Lab1/Lab-01C/Lab-01C/x64/Debug/Lab-01C.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  Lab-01C.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
Лабораторные/Lab1/Lab-01CS/: Lab-01CS.sln
Лабораторные/Lab1/Lab-01CS/Lab-01CS/: Lab-01CS.csproj  Program.cs
Лабораторные/Lab1/Lab1Cmake/: CMakeLists.txt
Лабораторные/Lab1/Lab1Cmake/C-Project/: CMakeLists.txt
Лабораторные/Lab1/Lab1Cmake/C-Project/src/: Source.c
Лабораторные/Lab1/Lab1Cmake/CSharp-Project/: CMakeLists.txt
Лабораторные/Lab1/Lab1Cmake/CSharp-Project/src/: Program.cs
Лабораторные/Lab2/Lab2/: CMakeLists.txt  lab02d.txt
Лабораторные/Lab2/Lab2/Lab-2a/: CMakeLists.txt
Лабораторные/Lab2/Lab2/Lab-2a/src/: Source.c
Лабораторные/Lab2/Lab2/Lab-2b/: CMakeLists.txt
Лабораторные/Lab2/Lab2/Lab-2b/src/: Source.c
Лабораторные/Lab2/Lab2/Lab-2c/: CMakeLists.txt
Лабораторные/Lab2/Lab2/Lab-2c/src/: read.c  writer.c
Лабораторные/Lab2/Lab2/Lab-2d/: CMakeLists.txt
Лабораторные/Lab2/Lab2/Lab-2d/src/: Source.c
Лабораторные/Lab2/Lab2/Lab-2e/: CMakeLists.txt
Лабораторные/Lab2/Lab2/Lab-2e/src/: reader.c  writer.c
Лабораторные/Lab3/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CMakeLists.txt  Lab-03.sln  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  ЛР3.docx
Лабораторные/Lab3/LVODLib/include/: LVOD.h
Лабораторные/Lab3/LVODLib/src/: CMakeLists.txt  LVOD.c  LVODLib.def
Лабораторные/Lab3/LVODLibPP/include/: LVODPP.h
Лабораторные/Lab3/LVODLibPP/src/: CMakeLists.txt  LVOCPP.cpp
Лабораторные/Lab3/LVOLib/: clang.bat
Лабораторные/Lab3/LVOLib/include/: LVO.h
Лабораторные/Lab3/LVOLib/src/: CMakeLists.txt  LVO.c
Лабораторные/Lab3/Lab-03b-Explicit/: CMakeLists.txt
Лабораторные/Lab3/Lab-03b-Explicit/src/: CMakeLists.txt  Lab03b.c
Лабораторные/Lab3/Lab-03b-Implicit/src/: CMakeLists.txt  Lab03bi.c
Лабораторные/Lab3/Lab-03c/src/: CMakeLists.txt  Lab03c.c
Лабораторные/Lab3/Lab03a/src/: CMakeLists.txt  client.c
Лабораторные/Lab3/LibLvod/: CMakeLists.txt
Лабораторные/Lab3/LibLvod/include/: libhd.h
Лабораторные/Lab3/LibLvod/src/: CMakeLists.txt  libhd.c
Лабораторные/Lab4/ComSampleClient/: CMakeLists.txt  Main.cpp
Лабораторные/Lab4/ComSampleProxy/: IComTest.h  IComTest.idl  IComTest_h.h  IComTest_i.c  IComTest_p.c
Лабораторные/Lab4/ComSampleServer/: CComServerTest.cpp
Лабораторные/Lab4/ComSampleService/: CComServiceTest.cpp  ClassFactory.cpp
Лабораторные/Lab5/: CMakeLists.txt  DemoService.c  ServiceCtl.c  ЛР5.docx
Лабораторные/Lab5/Linux/: CMakeLists.txt  config.ini  demoserviced.c  demoserviced.service
Лабораторные/Lab5/clang/: config.ini
Лабораторные/Lab6/windows_seh_tests-main/src/: ScrShots.docx
Лабораторные/Lab6/windows_seh_tests-main/src/xcpt4/: xcpt4.vcxproj  xcpt4u.c
Лабораторные/Lab6/windows_seh_tests-main/src/xframe_eh_dll/: xframe_eh_dll.exp  xframe_eh_dll.lib
Лекции/: Лекция 4 - Реестр Windows.pptx  Лекция 7 - Драйверы.pptx  Лекция 8 - SEH.pptx
Лекции/2/Linux/mmap/: mmcopy  t_mmap.c
Лекции/2/Windows/FileMapping/: ConsoleProcess2.c  MapViewOfFile2.c
Лекции/Примеры для лекций/2/Linux/mmap/: mmcat  t_mmap
Лекции/Примеры для лекций/2/Windows/FileMapping/: ConsoleProcess.c  FlushViewOfFile.c  MapViewOfFile.c
Лекции/Примеры для лекций/3/Linux/so-cmake/: CMakeLists.txt
Лекции/Примеры для лекций/3/Linux/so-cmake/LibProject/src/: CMakeLists.txt
Лекции/Примеры для лекций/3/Linux/so-cmake/MainProject/src/: CMakeLists.txt  program.c
Лекции/Примеры для лекций/3/Linux/so-inj/: compare_string.c  pass_equals.c
Лекции/Примеры для лекций/3/Linux/so-l/: mod1.c  prog.c
Лекции/Примеры для лекций/3/Linux/static-cmake/: CMakeLists.txt
Лекции/Примеры для лекций/3/Linux/static-cmake/LibProject/include/: testA.h
Лекции/Примеры для лекций/3/Linux/static-cmake/LibProject/src/: testA.c
Лекции/Примеры для лекций/3/Linux/static-cmake/MainProject/src/: CMakeLists.txt  test-client.c
Лекции/Примеры для лекций/3/Linux/static/include/: testW.h
Лекции/Примеры для лекций/3/Windows/dll-cmake/: CMakeLists.txt
Лекции/Примеры для лекций/3/Windows/dll-cmake/LibProject/src/: CMakeLists.txt
Лекции/Примеры для лекций/3/Windows/dll-cmake/MainProject/src/: CMakeLists.txt
Лекции/Примеры для лекций/3/Windows/dll-l/src/: test.c
Лекции/Примеры для лекций/3/Windows/dll/include/: MyLib.h
Лекции/Примеры для лекций/3/Windows/dll/src/: MyLib.c  test.c
Лекции/Примеры для лекций/3/Windows/dllcpp/include/: MyLib.hpp
Лекции/Примеры для лекций/3/Windows/dllcpp/src/: MyLib.cpp  MyLib.def  test.cpp
Лекции/Примеры для лекций/3/Windows/dllinj/src/: MyLib.c  test.c
Лекции/Примеры для лекций/3/Windows/static-cmake/: CMakeLists.txt
Лекции/Примеры для лекций/3/Windows/static-cmake/LibProject/src/: CMakeLists.txt  testW.c
Лекции/Примеры для лекций/3/Windows/static/src/: test-client.c
Лекции/Примеры для лекций/5/: COM+CMake.7z  На почитать.txt
Лекции/Примеры для лекций/6/Linux/: auto_daemon.c  daemon_SIGHUP  daemon_SIGHUP.c  man_testd  sudo  t_syslog  test_become_daemon  testd  testd (init.d)  testd (systemd)
Лекции/Примеры для лекций/6/Windows/: ChangeServiceConfig.c  ControlService.c  CreateService.c  DeleteService.c  DemoService.c  GetServiceDisplayName.c  GetServiceKeyName.c  LockServiceDatabase.c  QueryServiceConfig.c  QueryServiceStatus.c  StartService.c  sc.txt
Лекции/Примеры для лекций/8/: 01_Except.cpp  01_Finally.cpp  02_Except.cpp  02_Finally.cpp  03_Except.cpp  03_Finally.cpp  04_Except.cpp  05_Except.cpp  06_Except.cpp  07_Except.cpp  08_Except.cpp  09_Except.cpp  10_Except.cpp  11_Except.cpp  12_Except.cpp  13_Except.cpp
(+2 files in other folders)
